fix(header): Add wrap

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -90,6 +90,7 @@ header.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .header ul {
@@ -99,6 +100,7 @@ header.header {
   display: flex;
   gap: var(--default-padding);
   align-items: center;
+  flex-wrap: wrap-reverse;
 }
 
 .btn {
